--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "bootstrap-icons": "^1.5.0",
         "buffer": "^6.0.3",
         "events": "^3.3.0",
+        "flagnames": "^1.0.5",
         "vue": "^3.1.2",
         "vue-axios": "^3.4.1",
         "vue-numerals": "^4.0.6",
@@ -25,7 +26,7 @@
         "xumm-sdk": "^1.5.0"
     },
     "devDependencies": {
-        "@vitejs/plugin-vue": "^4.0.1",
+        "@vitejs/plugin-vue": "^4.0.0",
         "@vue/compiler-sfc": "^3.1.2",
         "sass": "^1.35.1",
         "vite": "^4.0.0"
