--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
+        "@transia/ripple-binary-codec": "^1.4.6-alpha.6",
         "axios": "^1.4.0",
         "bignumber.js": "^9.1.2",
         "bootstrap": "^5.3.0",
