--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
-        "@transia/ripple-binary-codec": "^1.4.6-alpha.6",
         "axios": "^1.4.0",
         "bignumber.js": "^9.1.2",
         "bootstrap": "^5.3.0",
@@ -19,6 +18,7 @@
         "buffer": "^6.0.3",
         "events": "^3.3.0",
         "flagnames": "^1.0.5",
+        "ripple-binary-codec": "^1.11.0",
         "vue": "^3.3.4",
         "vue-axios": "^3.4.1",
         "vue-numerals": "^4.0.6",
