--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@vitejs/plugin-vue": "^4.2.3",
         "@vue/compiler-sfc": "^3.3.4",
         "sass": "^1.63.5",
-        "vite": "^4.3.9"
+        "vite": "^4.3.9",
+        "vite-plugin-node-polyfills": "^0.16.0"
     }
 }
